# sat-synthesis

./: Cargo.toml  build.rs  rustfmt.toml  test.py
src/: lib.rs  nand.rs  sat_tables.rs  sum_of_products.rs  vpternlog.rs
